--- a/_dev/sass/block/_global.sass
+++ b/_dev/sass/block/_global.sass
@@ -21,14 +21,16 @@ img
 
 .section
   padding: 120px 0
+  &__footer
+    margin-top: 80px
+    text-align: center
   &--full
     min-height: 100vh
     display: flex
     flex-direction: column
     justify-content: center
-  &__footer
-    margin-top: 80px
-    text-align: center
+  &--dark
+    background: $c-main url("../../img/bg-section.png")
 
 .btn-wrap
   margin-top: 120px
