--- a/_dev/sass/block/_card.sass
+++ b/_dev/sass/block/_card.sass
@@ -34,11 +34,11 @@
       justify-self: end
     +rmax(sm)
       order: -1
-    img
-      width: 400px
-      +rmax(sm)
-        max-width: 70%
-        margin: auto
+    // img
+    //   width: 400px
+    //   +rmax(sm)
+    //     max-width: 70%
+    //     margin: auto
   &__title
     font-size: 22px
     margin: 0 0 2em
