--- a/public/css/common.css
+++ b/public/css/common.css
@@ -677,17 +677,6 @@ button.swiper-pagination-bullet {
   }
 }
 
-.card__img img {
-  width: 400px;
-}
-
-@media (max-width: 650px) {
-  .card__img img {
-    max-width: 70%;
-    margin: auto;
-  }
-}
-
 .card__title {
   font-size: 22px;
   margin: 0 0 2em;
@@ -962,6 +951,11 @@ img {
   padding: 120px 0;
 }
 
+.section__footer {
+  margin-top: 80px;
+  text-align: center;
+}
+
 .section--full {
   min-height: 100vh;
   display: -webkit-box;
@@ -976,9 +970,8 @@ img {
           justify-content: center;
 }
 
-.section__footer {
-  margin-top: 80px;
-  text-align: center;
+.section--dark {
+  background: #2e3542 url("../img/bg-section.png");
 }
 
 .btn-wrap {
