--- a/_dev/pug/cases.pug
+++ b/_dev/pug/cases.pug
@@ -7,7 +7,8 @@ block var
 block content
   section.b-use-cases.section
     .container
-      .h1.title-section= $i18n.cases.title
+      .header-section
+        h1.title-section= $i18n.cases.title
         span.subtitle-section= $i18n.cases.subtitle
       .b-cases
         .b-acc
