--- a/_dev/pug/index.pug
+++ b/_dev/pug/index.pug
@@ -24,7 +24,8 @@ block content
   section.b-section.--full
     .b-service
       .container
-        h2.title-section= $i18n.index.service.title
+        .header-section
+          h2.title-section= $i18n.index.service.title
         .b-slider.swiper-container.js-service-slider
           .swiper-pagination
           .swiper-wrapper
@@ -50,7 +51,8 @@ block content
   section.b-section.--full.--dark
     .b-cases
       .container
-        h2.title-section= $i18n.index.cases.title
+        .header-section
+          h2.title-section= $i18n.index.cases.title
           span.subtitle-section= $i18n.index.cases.subtitle
         .card-list
           each item, index in $i18n.index.cases.block
@@ -70,7 +72,8 @@ block content
     .b-work
       .container
         .__wrap
-          h2.title-section= $i18n.index.work.title
+          .header-section
+            h2.title-section= $i18n.index.work.title
           .b-work-list
             each item, index in $i18n.index.work.block
               .__item
@@ -90,7 +93,7 @@ block content
             span.separator
           .__txt= $i18n.index.use.txt
           .b-btn.--fill.__btn= $i18n.index.use.button
-        .__img
+        .__img.--outer
           img(src="../img/content/footer-banner.png", alt=$i18n.index.use.title)
 //- Content page_______________________________________
 block scripts
