--- a/_dev/sass/block/_global.sass
+++ b/_dev/sass/block/_global.sass
@@ -32,6 +32,10 @@ img
   &--dark
     background: $c-main url("../../img/bg-section.png")
 
+.mob-nav + .section
+  +r(lg)
+    padding-top: 160px
+
 .btn-wrap
   margin-top: 120px
   &--center
@@ -120,19 +124,25 @@ img
   100%
     transform: scale(1)
 
-.title-section
+.header-section
   font-weight: bold
   text-align: center
-  font-size: 20px
-  margin-bottom: 2em
+  margin-bottom: 40px
   +r(lg)
     margin-bottom: 120px
-    font-size: 26px
+  &__img
+    margin-bottom: 20px
+
+.title-section
+  font-size: 20px
+  margin: 0
+  +r(lg)
+    font-size: 24px
 
 .subtitle-section
   display: block
   text-align: center
-  font-size: .8em
+  font-size: 20px
   color: $c-sec
   font-weight: normal
   margin: 1em auto 0
