--- a/public/css/common.css
+++ b/public/css/common.css
@@ -641,7 +641,7 @@ button.swiper-pagination-bullet {
 .card {
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 40px;
+  gap: 40px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -657,16 +657,14 @@ button.swiper-pagination-bullet {
 
 @media (min-width: 992px) {
   .card {
-    -webkit-column-gap: 100px;
-       -moz-column-gap: 100px;
-            column-gap: 100px;
+    gap: 0 100px;
   }
 }
 
-@media (min-width: 650px) {
-  .card__img {
-    justify-self: end;
-  }
+.card__img {
+  position: relative;
+  max-width: 400px;
+  justify-self: center;
 }
 
 @media (max-width: 650px) {
@@ -677,22 +675,31 @@ button.swiper-pagination-bullet {
   }
 }
 
+@media (min-width: 992px) {
+  .card__img--outer {
+    -ms-flex-item-align: start;
+        align-self: start;
+    justify-self: end;
+  }
+  .card__img--outer img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 620px;
+    max-width: none;
+  }
+}
+
 .card__title {
   font-size: 22px;
   margin: 0 0 2em;
   line-height: 1.2;
-  font-size: 20px;
-}
-
-@media (min-width: 768px) {
-  .card__title {
-    font-size: 28px;
-  }
+  font-size: 18px;
 }
 
 @media (min-width: 992px) {
   .card__title {
-    font-size: 32px;
+    font-size: 21px;
   }
 }
 
@@ -758,9 +765,13 @@ button.swiper-pagination-bullet {
   }
 }
 
+.intro .card__img {
+  max-width: none;
+}
+
 @media (min-width: 992px) {
   .intro .card__title {
-    font-size: 32px;
+    font-size: 30px;
   }
 }
 
@@ -974,6 +985,12 @@ img {
   background: #2e3542 url("../img/bg-section.png");
 }
 
+@media (min-width: 992px) {
+  .mob-nav + .section {
+    padding-top: 160px;
+  }
+}
+
 .btn-wrap {
   margin-top: 120px;
 }
@@ -1116,24 +1133,37 @@ img {
   }
 }
 
-.title-section {
+.header-section {
   font-weight: bold;
   text-align: center;
+  margin-bottom: 40px;
+}
+
+@media (min-width: 992px) {
+  .header-section {
+    margin-bottom: 120px;
+  }
+}
+
+.header-section__img {
+  margin-bottom: 20px;
+}
+
+.title-section {
   font-size: 20px;
-  margin-bottom: 2em;
+  margin: 0;
 }
 
 @media (min-width: 992px) {
   .title-section {
-    margin-bottom: 120px;
-    font-size: 26px;
+    font-size: 24px;
   }
 }
 
 .subtitle-section {
   display: block;
   text-align: center;
-  font-size: .8em;
+  font-size: 20px;
   color: #9c9ea3;
   font-weight: normal;
   margin: 1em auto 0;
@@ -1844,9 +1874,12 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 .acc__item {
-  margin-bottom: 20px;
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
           box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.acc__item:not(:last-child) {
+  margin-bottom: 20px;
 }
 
 .acc__header {
@@ -1948,6 +1981,7 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 .acc__panel p {
+  margin: 1em 0 1em;
   color: #9c9ea3;
 }
 
@@ -1970,6 +2004,11 @@ input[type=range]::-webkit-slider-thumb {
   -webkit-transform: translateY(-50%) rotate(180deg);
       -ms-transform: translateY(-50%) rotate(180deg);
           transform: translateY(-50%) rotate(180deg);
+}
+
+.faq__question {
+  margin-bottom: 0;
+  cursor: pointer;
 }
 
 .price-carts {
