--- a/_dev/pug/faq.pug
+++ b/_dev/pug/faq.pug
@@ -1,8 +1,8 @@
 extend ./part/_base
 block var
   - var current= $i18n.glob.nav.company.link[1].name;
-  - var title= $i18n.cases.meta.title;
-  - var desc= $i18n.cases.meta.desc;
+  - var title= $i18n.faq.meta.title;
+  - var desc= $i18n.faq.meta.desc;
 
 block content
   section.b-faq.section
