--- a/_dev/pug/part/_base.pug
+++ b/_dev/pug/part/_base.pug
@@ -38,4 +38,6 @@ html(lang= $i18n.glob.lang.current)
     //- script(src='../js/vendors/jquery-3.4.1.min.js')
 
   block scripts
+  include ./script.html
+
   //- script(src='js/hot-bundle.js')
