--- a/_dev/pug/part/_nav.pug
+++ b/_dev/pug/part/_nav.pug
@@ -19,7 +19,7 @@
         .__list
           each lang in $i18n.glob.lang.list
             .__item(data-lang=lang)
-              +flag(lang)
+              +flag('by')
               = lang
 
 
