--- a/public/css/common.css
+++ b/public/css/common.css
@@ -158,6 +158,18 @@ svg {
   fill: currentColor;
 }
 
+.ico-mono-soc-linkedin {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+}
+
+.ico-mono-soc-telegram {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+}
+
 .ico-mono-soc-tw {
   width: 1em;
   height: 1em;
